--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,9 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[Makefile]
+indent_style = tab
+
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
