--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
       "path": "node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "tslib": "^1.9.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3",
